--- a/index.html
+++ b/index.html
@@ -4,140 +4,203 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
 
-<!-- BODY -->
+  <!-- BODY -->
   <body>
-
-<!-- HEADER -->
+    <!-- HEADER -->
     <header>
+      <div class="container main-header">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo"> Web<span class="studio-black">Studio</span> </a>
 
-      <nav>
+          <ul class="list site-nav">
+            <li class="menu-item">
+              <a href="./index.html" class="link menu current">Студія</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="link menu">Портфоліо</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="link menu">Контакти</a>
+            </li>
+          </ul>
+        </nav>
 
-        <a href="./index.html" class="logo"> Web<span class="studio-black">Studio</span></a>
-
-        <ul class="list site-nav">
-          <li>
-            <a href="./index.html" class="link menu current">Студія</a>
+        <ul class="list cont-list">
+          <li class="cont-item">
+            <a href="mailto:info@devstudio.com" class="link contact">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link menu">Портфоліо</a>
-          </li>
-          <li>
-            <a href="" class="link menu">Контакти</a>
+          <li class="cont-item">
+            <a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a>
           </li>
         </ul>
-
-      </nav>
-
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link contact">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a>
-        </li>
-      </ul>
-
+      </div>
     </header>
 
-<!-- MAIN -->
+    <!-- MAIN -->
     <main>
-
       <!-- HERO -->
-      <section class="hero section">
+      <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="btn hero-btn">Замовити послугу</button>
       </section>
 
       <!-- ABOUT US -->
-      <section class="section">
-        <h2 class="title hiden-title">О нас</h2>
-        <ul class="list">
-          <li class="about-item">
-            <h3 class="about-title">Увага до деталей</h3>
-            <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-          </li>
-          <li class="about-item">
-            <h3 class="about-title">Пунктуальність</h3>
-            <p  class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-          </li>
-          <li class="about-item">
-            <h3 class="about-title">Планування</h3>
-            <p  class="about-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li class="about-item">
-            <h3 class="about-title">Сучасні технології</h3>
-            <p  class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-          </li>
-        </ul>
+      <section class="section no-padding">
+        <div class="container">
+          <h2 class="hiden-title">О нас</h2>
+          <ul class="list about-list">
+            <li class="about-item">
+              <h3 class="about-title">Увага до деталей</h3>
+              <p class="about-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Пунктуальність</h3>
+              <p class="about-text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Планування</h3>
+              <p class="about-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Сучасні технології</h3>
+              <p class="about-text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- WHAT WE DO -->
       <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box-1.jpg" alt="Что мы делаем - для компьютера" width="370" height="294">
-          </li>
-          <li>
-            <img src="./images/box-2.jpg" alt="Что мы делаем - для телефона" width="370" height="294">
-          </li>
-          <li>
-            <img src="./images/box-3.jpg" alt="Что мы делаем - для планшетов" width="370" height="294">
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="list img-list">
+            <li>
+              <img
+                src="./images/box-1.jpg"
+                alt="Что мы делаем - для компьютера"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box-2.jpg"
+                alt="Что мы делаем - для телефона"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box-3.jpg"
+                alt="Что мы делаем - для планшетов"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- OUR TEAM -->
       <section class="team section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li class="team-item">
-            <img src="./images/team-1.jpg" alt="Фото дизайнера" width="270" height="260">
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/team-2.jpg" alt="Фото разработчика" width="270" height="260">
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/team-3.jpg" alt="Фото Маркетолога" width="270" height="260">
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/team-4.jpg" alt="Фото UI дизайнера" width="270" height="260">
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img
+                src="./images/team-1.jpg"
+                alt="Фото дизайнера"
+                width="270"
+                height="260"
+                class="team-img"
+              />
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-2.jpg"
+                alt="Фото разработчика"
+                width="270"
+                height="260"
+                class="team-img"
+              />
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-3.jpg"
+                alt="Фото Маркетолога"
+                width="270"
+                height="260"
+                class="team-img"
+              />
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-4.jpg"
+                alt="Фото UI дизайнера"
+                width="270"
+                height="260"
+                class="team-img"
+              />
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="studio-white">Studio</span></a>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a href="https://goo.gl/maps/RJxYpGqixrXidumn7" class="physical-adds">м. Київ, пр-т Лесі Українки, 26</a>
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="link contact-adds">info@example.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="link contact-adds">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo">Web<span class="studio-white">Studio</span></a>
+        <address class="address">
+          <ul class="list">
+            <li>
+              <a href="https://goo.gl/maps/RJxYpGqixrXidumn7" class="physical-adds"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@example.com" class="link contact-adds">info@example.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link contact-adds">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
