--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
       <div class="container main-header">
         <nav class="main-nav">
-          <a href="./index.html" class="logo"> Web<span class="studio-black">Studio</span> </a>
+          <a href="./index.html" class="logo top"> Web<span class="studio-black">Studio</span> </a>
 
           <ul class="list site-nav">
             <li class="menu-item">
@@ -184,18 +184,18 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">Web<span class="studio-white">Studio</span></a>
+        <a href="./index.html" class="logo bottom">Web<span class="studio-white">Studio</span></a>
         <address class="address">
           <ul class="list">
-            <li>
+            <li class="contact-item">
               <a href="https://goo.gl/maps/RJxYpGqixrXidumn7" class="physical-adds"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="contact-item">
               <a href="mailto:info@example.com" class="link contact-adds">info@example.com</a>
             </li>
-            <li>
+            <li class="contact-item">
               <a href="tel:+380961111111" class="link contact-adds">+38 096 111 11 11</a>
             </li>
           </ul>
