--- a/portfolio.html
+++ b/portfolio.html
@@ -25,178 +25,198 @@
   <body>
     <!-- HEADER -->
     <header>
-      <nav>
-        <a href="./index.html" class="logo">
-          Web<span class="studio-black">Studio</span></a
-        >
+      <div class="container main-header">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo top"> Web<span class="studio-black">Studio</span> </a>
 
-        <ul class="list site-nav">
-          <li>
-            <a href="./index.html" class="link menu">Студія</a>
+          <ul class="list site-nav">
+            <li class="menu-item">
+              <a href="./index.html" class="link menu">Студія</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="link menu current">Портфоліо</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="link menu">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="list cont-list">
+          <li class="cont-item">
+            <a href="mailto:info@devstudio.com" class="link contact">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link menu current">Портфоліо</a>
-          </li>
-          <li>
-            <a href="" class="link menu">Контакти</a>
+          <li class="cont-item">
+            <a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="list contact-list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link contact"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <!-- MAIN -->
     <main>
-      <section>
-        <h1 class="title hiden-title">Портфоліо</h1>
-        <ul class="list btn-list">
-          <li>
-            <button type="button" class="portfolio-btn btn active">Все</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn btn">Веб-сайти</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn btn">Додатки</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn btn">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn btn">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="list portfolio-list">
-          <li>
-            <img
-              src="./images/project1.jpg"
-              alt="Веб-сайт Технокряк"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/project2.jpg"
-              alt="Дизайн Постера"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/project3.jpg"
-              alt="Приложение Ресторана"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p class="portfolio-text">Додаток</p>
-          </li>
-          <li>
-            <img
-              src="./images/project4.jpg"
-              alt="Маркетинг Проекта"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Проект Prime</h2>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/project5.jpg"
-              alt="Приложение для проекта Boxes"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Проект Boxes</h2>
-            <p class="portfolio-text">Додаток</p>
-          </li>
-          <li>
-            <img
-              src="./images/project6.jpg"
-              alt="Веб-сайт для Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/project7.jpg"
-              alt="Дизайн для Издания"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Издание Limited Edition</h2>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/project8.jpg"
-              alt="Маркетинг для проекта LAB"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Проект LAB</h2>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/project9.jpg"
-              alt="Приложение для Growing Business"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Growing Business</h2>
-            <p class="portfolio-text">Додаток</p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h1 class="title hiden-title">Портфоліо</h1>
+          <ul class="list btn-list">
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn btn active">Все</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn btn">Веб-сайти</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn btn">Додатки</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn btn">Дизайн</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="list portfolio-list">
+            <li>
+              <img
+                src="./images/project1.jpg"
+                alt="Веб-сайт Технокряк"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project2.jpg"
+                alt="Дизайн Постера"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project3.jpg"
+                alt="Приложение Ресторана"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project4.jpg"
+                alt="Маркетинг Проекта"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Проект Prime</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project5.jpg"
+                alt="Приложение для проекта Boxes"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Проект Boxes</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project6.jpg"
+                alt="Веб-сайт для Inspiration has no Borders"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project7.jpg"
+                alt="Дизайн для Издания"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Издание Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project8.jpg"
+                alt="Маркетинг для проекта LAB"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Проект LAB</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project9.jpg"
+                alt="Приложение для Growing Business"
+                width="370"
+                height="294"
+                class="img-portfolio"
+              />
+              <div class="portfolio-desc">
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="studio-white">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/RJxYpGqixrXidumn7"
-              class="physical-adds"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="link contact-adds"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="link contact-adds"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo bottom">Web<span class="studio-white">Studio</span></a>
+        <address class="address">
+          <ul class="list">
+            <li class="contact-item">
+              <a href="https://goo.gl/maps/RJxYpGqixrXidumn7" class="physical-adds"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="contact-item">
+              <a href="mailto:info@example.com" class="link contact-adds">info@example.com</a>
+            </li>
+            <li class="contact-item">
+              <a href="tel:+380961111111" class="link contact-adds">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
