--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
   <!-- BODY -->
   <body>
     <!-- HEADER -->
-    <header>
+    <header class="header">
       <div class="container main-header">
         <nav class="main-nav">
           <a href="./index.html" class="logo top"> Web<span class="studio-black">Studio</span> </a>
