--- a/index.html
+++ b/index.html
@@ -188,9 +188,14 @@
         <address class="address">
           <ul class="list">
             <li class="contact-item">
-              <a href="https://goo.gl/maps/RJxYpGqixrXidumn7" class="physical-adds"
-                >м. Київ, пр-т Лесі Українки, 26</a
+              <a
+                href="https://goo.gl/maps/RJxYpGqixrXidumn7"
+                class="physical-adds"
+                target="_blank"
+                rel="noopener noreferrer"
               >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
             </li>
             <li class="contact-item">
               <a href="mailto:info@example.com" class="link contact-adds">info@example.com</a>
