--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
             </li>
           </ul>
           <ul class="list portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project1.jpg"
                 alt="Веб-сайт Технокряк"
@@ -89,7 +89,7 @@
                 <p class="portfolio-text">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project2.jpg"
                 alt="Дизайн Постера"
@@ -102,7 +102,7 @@
                 <p class="portfolio-text">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project3.jpg"
                 alt="Приложение Ресторана"
@@ -115,7 +115,7 @@
                 <p class="portfolio-text">Додаток</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project4.jpg"
                 alt="Маркетинг Проекта"
@@ -128,7 +128,7 @@
                 <p class="portfolio-text">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project5.jpg"
                 alt="Приложение для проекта Boxes"
@@ -141,7 +141,7 @@
                 <p class="portfolio-text">Додаток</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project6.jpg"
                 alt="Веб-сайт для Inspiration has no Borders"
@@ -154,7 +154,7 @@
                 <p class="portfolio-text">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project7.jpg"
                 alt="Дизайн для Издания"
@@ -167,7 +167,7 @@
                 <p class="portfolio-text">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project8.jpg"
                 alt="Маркетинг для проекта LAB"
@@ -179,7 +179,7 @@
                 <p class="portfolio-text">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/project9.jpg"
                 alt="Приложение для Growing Business"
