--- a/portfolio.html
+++ b/portfolio.html
@@ -77,120 +77,138 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/project1.jpg"
-                alt="Веб-сайт Технокряк"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project1.jpg"
+                  alt="Веб-сайт Технокряк"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project2.jpg"
-                alt="Дизайн Постера"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project2.jpg"
+                  alt="Дизайн Постера"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project3.jpg"
-                alt="Приложение Ресторана"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project3.jpg"
+                  alt="Приложение Ресторана"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project4.jpg"
-                alt="Маркетинг Проекта"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Проект Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project4.jpg"
+                  alt="Маркетинг Проекта"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project5.jpg"
-                alt="Приложение для проекта Boxes"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Проект Boxes</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project5.jpg"
+                  alt="Приложение для проекта Boxes"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project6.jpg"
-                alt="Веб-сайт для Inspiration has no Borders"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project6.jpg"
+                  alt="Веб-сайт для Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project7.jpg"
-                alt="Дизайн для Издания"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Издание Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project7.jpg"
+                  alt="Дизайн для Издания"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project8.jpg"
-                alt="Маркетинг для проекта LAB"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Проект LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project8.jpg"
+                  alt="Маркетинг для проекта LAB"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/project9.jpg"
-                alt="Приложение для Growing Business"
-                width="370"
-                height="294"
-                class="img-portfolio"
-              />
-              <div class="portfolio-desc">
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/project9.jpg"
+                  alt="Приложение для Growing Business"
+                  width="370"
+                  height="294"
+                  class="img-portfolio"
+                />
+                <div class="portfolio-desc">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
